--- a/js/templates/treatment-column.tpl.html
+++ b/js/templates/treatment-column.tpl.html
@@ -5,6 +5,6 @@
             <a data-wysihtml5-command="bold">bold</a>
             <a data-wysihtml5-command="italic">italic</a>
         </div>
-        <textarea class="form-control wysihtml-textarea" ng-model="content" msd-elastic id="wysihtml-{{uniqueId}}" ng-disabled="{{readonly}}"></textarea>
+        <textarea rows="1" class="form-control wysihtml-textarea" ng-model="content" msd-elastic id="wysihtml-{{uniqueId}}" ng-disabled="{{readonly}}"></textarea>
     </div>
 </div>
