--- a/js/templates/treatment.tpl.html
+++ b/js/templates/treatment.tpl.html
@@ -1,4 +1,5 @@
-<div class="col-xs-12 treatment mandator-{{treatment.mandator}}" ng-class="{secondary: !treatment.isMainTreatment, closed: treatment.closed || treatment.billed}" tabindex="-1">
+<div class="col-xs-12 treatment mandator-{{treatment.mandator}}"
+     ng-class="{secondary: !treatment.isMainTreatment, closed: treatment.closed || treatment.billed}" tabindex="-1">
     <div class="panel" ng-class="treatment.type=='success' ? 'panel-success' : 'panel-default'">
         <div class="panel-heading clearfix">
             <div class="row">
@@ -13,34 +14,35 @@
                         <span class="heading-label" ng-show="treatment.isMainTreatment ">{{treatment.date | date:'EEE dd.MM.yyyy HH:mm':'UTC'}}</span>
                         <ul class="dropdown-menu">
                             <li role="presentation"><a role="menuitem"
-                                                       ng-href="{{dc.baseUrl}}set/treatment/{{treatment.id}}">Behandlung einstellen</a>
+                                                       ng-href="{{dc.baseUrl}}set/treatment/{{treatment.id}}">Behandlung
+                                einstellen</a>
                             </li>
-                            <li role="presentation"><a role="menuitem"  href
+                            <li role="presentation"><a role="menuitem" href
                                                        ng-click="dc.deleteTreatment(treatment, treatments)">Behandlung
                                 löschen</a>
                             </li>
-                            <li role="presentation"><a role="menuitem"  href
+                            <li role="presentation"><a role="menuitem" href
                                                        ng-click="dc.changeStatus(treatment)">Behandlung <span
                                     ng-hide="treatment.closed">schliessen</span>
                                 <span ng-show="treatment.closed">wieder öffnen</span></a>
                             </li>
                             <li role="presentation" class="divider"></li>
-                            <li role="presentation"><a role="menuitem"  href
+                            <li role="presentation"><a role="menuitem" href
                                                        ng-click="dc.addTreatment(treatment, true, true, treatments)">Neue
                                 Behandlung</a>
                             </li>
-                            <li role="presentation"><a role="menuitem"  href
+                            <li role="presentation"><a role="menuitem" href
                                                        ng-click="dc.copyTreatment(treatment, treatments)">Neue
                                 Behandlung (Kopie)</a></li>
-                            <li role="presentation"><a role="menuitem"  href
+                            <li role="presentation"><a role="menuitem" href
                                                        ng-click="dc.addTreatment(treatment, true, false, treatments)">Neue
                                 Nebenbehandlung</a></li>
                             <li role="presentation" class="divider"></li>
-                            <li role="presentation"><a role="menuitem"  href
+                            <li role="presentation"><a role="menuitem" href
                                                        ng-click="dc.addTreatment(treatment, false, true, treatments)">Neue
                                 Nichtmandanten-Behandlung</a>
                             </li>
-                            <li role="presentation"><a role="menuitem"  href
+                            <li role="presentation"><a role="menuitem" href
                                                        ng-click="dc.addTreatment(treatment, false, false, treatments)">Neue
                                 Nichtmandanten-Nebenbehandlung</a>
                             </li>
@@ -72,14 +74,20 @@
                 <div class="col-xs-2">
                     <div class="dropdown" toggle-focus dropdown>
                         <a class="btn btn-default dropdown-toggle" dropdown-toggle>
-                            F:{{treatment.invoiceCase.name ? treatment.invoiceCase.name : '???' }}
+                            F: {{treatment.invoiceCase.name ? treatment.invoiceCase.name : '???' }}
                         </a>
                         <ul class="dropdown-menu">
-                            <li ng-show="treatment.invoiceCase.name"><a ng-href="{{dc.baseUrl}}show/case/{{treatment.invoiceCase.id}}/">Fall: {{treatment.invoiceCase.name}} anzeigen</a></li>
-                            <li ng-show="treatment.invoice.id"><a ng-href="{{dc.baseUrl}}show/invoice/{{treatment.invoice.id}}/">Rechnung: {{treatment.invoice.id}} anzeigen</a></li>
-                            <li role="presentation" class="divider" ng-show="treatment.invoice.id || treatment.invoiceCase.name"></li>
+                            <li ng-show="treatment.invoiceCase.name"><a
+                                    ng-href="{{dc.baseUrl}}show/case/{{treatment.invoiceCase.id}}/">Fall:
+                                {{treatment.invoiceCase.name}} anzeigen</a></li>
+                            <li ng-show="treatment.invoice.id"><a
+                                    ng-href="{{dc.baseUrl}}show/invoice/{{treatment.invoice.id}}/">Rechnung:
+                                {{treatment.invoice.id}} anzeigen</a></li>
+                            <li role="presentation" class="divider"
+                                ng-show="treatment.invoice.id || treatment.invoiceCase.name"></li>
                             <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/case/">Fall zuweisen...</a></li>
-                            <li ng-show="treatment.invoiceCase.name"><a href ng-click="dc.removeCase(treatment)">Ohne Fall</a></li>
+                            <li ng-show="treatment.invoiceCase.name"><a href ng-click="dc.removeCase(treatment)">Ohne
+                                Fall</a></li>
                             <li role="presentation" class="divider"></li>
                             <li><a ng-href="{{dc.baseUrl}}goto/case">Gehe zu Fälle & Garanten</a></li>
                         </ul>
@@ -89,82 +97,104 @@
                 <div class="col-xs-3">
                     <div class="pull-right">
                         <div class="dropdown icon-dropdown" toggle-focus dropdown>
-                            <a class="btn dropdown-toggle achilles-icon achilles-medication" ng-class="{'empty': !treatment.hasMedication}" dropdown-toggle>
+                            <a class="btn dropdown-toggle achilles-icon achilles-medication"
+                               ng-class="{'empty': !treatment.hasMedication}" dropdown-toggle>
                                 &nbsp;
                             </a>
                             <ul class="dropdown-menu dropdown-menu-right">
                                 <li><a href>Medikamente</a></li>
                                 <li role="presentation" class="divider"></li>
                                 <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/drug/given/">Abgeben</a></li>
-                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/drug/prescription/">Rezept</a></li>
+                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/drug/prescription/">Rezept</a>
+                                </li>
                                 <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/drug/foreign/">Fremd</a></li>
                                 <li role="presentation" class="divider"></li>
                                 <li><a ng-href="{{dc.baseUrl}}goto/drug/">Gehe zu Medi-Listen</a></li>
                             </ul>
                         </div>
-                        <div class="dropdown icon-dropdown" dropdown toggle-focus on-toggle="dc.loadLaboratoryReports(open)">
-                            <a class="btn dropdown-toggle achilles-icon achilles-laboratory"  ng-class="{'empty': !treatment.hasLaboratory}" dropdown-toggle>
+                        <div class="dropdown icon-dropdown" dropdown toggle-focus
+                             on-toggle="dc.loadLaboratoryReports(open)">
+                            <a class="btn dropdown-toggle achilles-icon achilles-laboratory"
+                               ng-class="{'empty': !treatment.hasLaboratory}" dropdown-toggle>
                                 &nbsp;
                             </a>
                             <ul class="dropdown-menu dropdown-menu-right">
                                 <li><a href>Labor-Resultate</a></li>
                                 <li role="presentation" class="divider" ng-show="dc.laboratoryReports.length"></li>
-                                <li ng-repeat="laboratoryReport in dc.laboratoryReports"><a ng-href="{{dc.baseUrl}}set/laboratory/{{laboratoryReport.id}}/">{{laboratoryReport.name}}</a></li>
+                                <li ng-repeat="laboratoryReport in dc.laboratoryReports"><a
+                                        ng-href="{{dc.baseUrl}}set/laboratory/{{laboratoryReport.id}}/">{{laboratoryReport.name}}</a>
+                                </li>
                                 <li role="presentation" class="divider"></li>
                                 <li><a ng-href="{{dc.baseUrl}}goto/laboratory/">Gehe zu Labor</a></li>
                             </ul>
                         </div>
                         <div class="dropdown icon-dropdown" dropdown toggle-focus on-toggle="dc.loadDocuments(open)">
-                            <a class="btn dropdown-toggle achilles-icon achilles-document"  ng-class="{'empty': !treatment.hasDocument}" dropdown-toggle>
+                            <a class="btn dropdown-toggle achilles-icon achilles-document"
+                               ng-class="{'empty': !treatment.hasDocument}" dropdown-toggle>
                                 &nbsp;
                             </a>
                             <ul class="dropdown-menu dropdown-menu-right">
                                 <li><a href>Briefe & Dokumente</a></li>
                                 <li role="presentation" class="divider" ng-show="dc.documents.length"></li>
-                                <li ng-repeat="document in dc.documents"><a ng-href="{{dc.baseUrl}}set/document/{{document.id}}/">{{document.name}}</a></li>
+                                <li ng-repeat="document in dc.documents"><a
+                                        ng-href="{{dc.baseUrl}}set/document/{{document.id}}/">{{document.name}}</a></li>
                                 <li role="presentation" class="divider"></li>
-                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/document/letterto/">Neuer Brief an</a></li>
-                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/document/letterfrom/">Neuer Brief von</a></li>
-                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/document/document/">Neues Dokument</a></li>
+                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/document/letterto/">Neuer Brief
+                                    an</a></li>
+                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/document/letterfrom/">Neuer
+                                    Brief von</a></li>
+                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/document/document/">Neues
+                                    Dokument</a></li>
                                 <li role="presentation" class="divider"></li>
                                 <li><a ng-href="{{dc.baseUrl}}goto/document/">Gehe zu Briefe & Dokumente</a></li>
                             </ul>
                         </div>
                         <div class="dropdown icon-dropdown" dropdown toggle-focus on-toggle="dc.loadDisability(open)">
-                            <a class="btn dropdown-toggle achilles-icon achilles-auf"  ng-class="{'empty': !treatment.hasDisability}" dropdown-toggle>
+                            <a class="btn dropdown-toggle achilles-icon achilles-auf"
+                               ng-class="{'empty': !treatment.hasDisability}" dropdown-toggle>
                                 &nbsp;
                             </a>
                             <ul class="dropdown-menu dropdown-menu-right">
                                 <li><a href>Arbeitsunfähigkeit</a></li>
                                 <li role="presentation" class="divider" ng-show="dc.disabilityCertificates.length"></li>
-                                <li ng-repeat="disabilityCertificate in dc.disabilityCertificates"><a ng-href="{{dc.baseUrl}}set/disability/{{disabilityCertificate.id}}/">{{disabilityCertificate.name}}</a></li>
+                                <li ng-repeat="disabilityCertificate in dc.disabilityCertificates"><a
+                                        ng-href="{{dc.baseUrl}}set/disability/{{disabilityCertificate.id}}/">{{disabilityCertificate.name}}</a>
+                                </li>
                                 <li role="presentation" class="divider"></li>
-                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/disability/">Neue Arbeitsunfähigkeit</a></li>
+                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/disability/">Neue
+                                    Arbeitsunfähigkeit</a></li>
                             </ul>
                         </div>
                         <div class="dropdown icon-dropdown" dropdown toggle-focus on-toggle="dc.loadBiometrics(open)">
-                            <a class="btn dropdown-toggle achilles-icon achilles-biometric"  ng-class="{'empty': !treatment.hasBiometric}" dropdown-toggle>
+                            <a class="btn dropdown-toggle achilles-icon achilles-biometric"
+                               ng-class="{'empty': !treatment.hasBiometric}" dropdown-toggle>
                                 &nbsp;
                             </a>
                             <ul class="dropdown-menu dropdown-menu-right">
                                 <li><a href>Biometrische Daten</a></li>
                                 <li role="presentation" class="divider" ng-show="dc.biometrics.length"></li>
-                                <li ng-repeat="biometric in dc.biometrics"><a ng-href="{{dc.baseUrl}}set/biometric/{{biometric.id}}/">{{biometric.name}}</a></li>
+                                <li ng-repeat="biometric in dc.biometrics"><a
+                                        ng-href="{{dc.baseUrl}}set/biometric/{{biometric.id}}/">{{biometric.name}}</a>
+                                </li>
                                 <li role="presentation" class="divider"></li>
-                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/biometric/">Neue Biometrische Daten</a></li>
+                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/biometric/">Neue Biometrische
+                                    Daten</a></li>
                                 <li role="presentation" class="divider"></li>
                                 <li><a ng-href="{{dc.baseUrl}}goto/biometric/">Gehe zu Biometrische Daten</a></li>
                             </ul>
                         </div>
                         <div class="dropdown icon-dropdown" toggle-focus dropdown>
-                            <a class="btn dropdown-toggle achilles-icon achilles-benefit"  ng-class="{'empty': !treatment.hasService}" dropdown-toggle>
+                            <a class="btn dropdown-toggle achilles-icon achilles-benefit"
+                               ng-class="{'empty': !treatment.hasService}" dropdown-toggle>
                                 &nbsp;
                             </a>
                             <ul class="dropdown-menu dropdown-menu-right">
                                 <li><a href>Leistungen</a></li>
                                 <li role="presentation" class="divider"></li>
-                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/service/treatment/">Neue Leistungen zu Behandlung</a></li>
-                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/service/generic/">Neue Leistungen</a></li>
+                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/service/treatment/">Neue
+                                    Leistungen zu Behandlung</a></li>
+                                <li><a ng-href="{{dc.baseUrl}}treatment/{{treatment.id}}/service/generic/">Neue
+                                    Leistungen</a></li>
 
                                 <!-- TODO show 2 Menus above if Treatment is NOT billed, show following Menu if Treatment is billed -->
                                 <li><a ng-href="{{dc.baseUrl}}show/service/{{treatment.id}}/">Leistungen zeigen</a></li>
@@ -181,13 +211,14 @@
             <ul class="list-group">
                 <treatment-entry entry="entry" ng-repeat="entry in treatment.entries | orderBy:'type.name'">
                 </treatment-entry>
-                <li class="list-group-item">
+                <li class="list-group-item" ng-show="treatment.focused || select2Open">
                     <div class="row">
-                        <div class="col-xs-9 col-xs-offset-3 type-select">
-                            <select2 class="form-control"
-                                     ng-change="dc.addEntry(treatment.id, dc.newEntry.type, treatment.entries)"
-                                     ng-model="dc.newEntry.type"
-                                     ng-options="type as type.name group by type.name.substr(0,1) for type in dc.types track by type.id"></select2>
+                        <div class="col-xs-12 type-select">
+                            <select2 placeholder="Neuer Behandlungstitel (F9)"
+                                    class="form-control"
+                                    ng-change="dc.addEntry(treatment.id, dc.newEntry.type, treatment.entries)"
+                                    ng-model="dc.newEntry.type"
+                                    ng-options="type as type.name group by type.name.substr(0,1) for type in dc.types track by type.id"></select2>
                         </div>
                     </div>
                 </li>
