--- a/js/templates/treatment-entry.tpl.html
+++ b/js/templates/treatment-entry.tpl.html
@@ -1,12 +1,12 @@
 <li class="list-group-item">
     <div class="row">
-        <div class="col-xs-4 col-sm-3">
+        <div class="col-xs-4 col-sm-3 col-lg-2">
             <div class="form-group">
                 <span>{{entry.type.name}}</span>
             </div>
             <!--<treatment-type entry="entry"></treatment-type>-->
         </div>
-        <div class="col-xs-8 col-sm-9">
+        <div class="col-xs-8 col-sm-9 col-lg-10">
             <form name="entryform">
                 <div class="row" treatment-row ng-repeat="row in entry.rows | orderBy:'id'">
                     <treatment-column ng-repeat="column in row.columns" content="column.content"
