--- a/css/custom.css
+++ b/css/custom.css
@@ -182,7 +182,7 @@
 }
 
 .treatment .panel-body {
-    padding: 3px 15px;
+    padding: 10px 15px 3px 15px;
 }
 
 .large-margins .treatment .panel-body {
