--- a/js/templates/treatment.tpl.html
+++ b/js/templates/treatment.tpl.html
@@ -219,7 +219,7 @@
                 </div>
             </div>
         </li>
-        <li class="list-group-item" ng-show="treatment.focused || select2Open">
+        <li class="list-group-item" ng-show="treatment.focused || select2Open || treatment.new">
             <div class="row">
                 <div class="col-xs-12 type-select">
                     <select2 placeholder="Neuer Behandlungstitel (F9)"
