--- a/js/templates/treatment-entry.tpl.html
+++ b/js/templates/treatment-entry.tpl.html
@@ -8,7 +8,9 @@
         </div>
         <div class="col-xs-8 col-sm-9 col-lg-10">
             <form name="entryform">
-                <div class="row" treatment-row ng-repeat="row in entry.rows | orderBy:'id'">
+                <div class="row" treatment-row ng-repeat="row in entry.rows | orderBy:'id'" ng-class="{locked: row.locked}">
+                    <span class="label label-warning locked-warning" ng-show="row.locked">Gesperrt von {{row.lockedBy}}</span>
+
                     <treatment-column ng-repeat="column in row.columns" content="column.content"
                                       width="{{column.width}}" unique-id="{{row.id}}-{{$index}}"
                                       editable="{{editable}}" treatment-id="{{treatmentId}}"
