--- a/css/custom.css
+++ b/css/custom.css
@@ -391,8 +391,10 @@ span.checkmark {
     min-height: 34px;
 }
 
-.locked .ta-editor {
-    background-color: #eeeeee;
+.locked .ta-root.focussed > .ta-scroll-window.form-control {
+    border: 1px solid orangered;
+    webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 69, 0, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 69, 0, 0.6);
 }
 
 .locked-warning {
