added some permissions

--- a/css/custom.css
+++ b/css/custom.css
@@ -119,9 +119,12 @@
     margin-bottom: -5px;
 }
 
-.gdt-list li.divider:last-child {
+.dropdown-menu li.divider:first-child,
+.dropdown-menu li.divider:last-child {
     display: none;
 }
+
+
 
 /*.form-control {
     border-width: 0;
