--- a/js/templates/treatment.tpl.html
+++ b/js/templates/treatment.tpl.html
@@ -13,15 +13,25 @@
         -->
         <span class="heading-label" ng-show="treatment.isMainTreatment ">{{treatment.date | date:'EEE dd.MM.yyyy HH:mm':'UTC'}}</span>
         <ul class="dropdown-menu">
-            <li role="presentation"><a role="menuitem"
+            <li role="presentation"
+                ng-if="(treatment.isMandatorTreatment && !treatment.billed && !treatment.closed && user.mandator.id == treatment.mandator)
+                         || (!treatment.isMandatorTreatment && user.token == treatment.userToken)">
+                <a role="menuitem"
                                        ng-href="{{dc.baseUrl}}set/treatment/{{treatment.id}}">Behandlung
                 einstellen</a>
             </li>
-            <li role="presentation"><a role="menuitem" href
+            <li role="presentation"
+                    ng-if="(treatment.isMandatorTreatment && !treatment.hasLaboratory && !treatment.hasDocument && !treatment.hasDisability
+                    && !treatment.hasBiometric && !treatment.hasService && !treatment.hasMedication && user.mandator.id == treatment.mandator)
+                    || (!treatment.isMandatorTreatment && user.token == treatment.userToken)">
+                <a role="menuitem" href
                                        ng-click="dc.deleteTreatment(treatment, treatments)">Behandlung
                 löschen</a>
             </li>
-            <li role="presentation"><a role="menuitem" href
+            <li role="presentation"
+                    ng-if="(treatment.isMandatorTreatment && user.mandator.id == treatment.mandator && !treatment.hasService && !treatment.billed)
+                    || (!treatment.isMandatorTreatment && user.token == treatment.userToken)">
+                <a role="menuitem" href
                                        ng-click="dc.changeStatus(treatment)">Behandlung <span
                     ng-hide="treatment.closed">schliessen</span>
                 <span ng-show="treatment.closed">wieder öffnen</span></a>
@@ -31,18 +41,18 @@
                                        ng-click="dc.addTreatment(treatment, true, true, treatments)">Neue
                 Behandlung</a>
             </li>
-            <li role="presentation"><a role="menuitem" href
+            <li role="presentation" ng-if="treatment.isMandatorTreatment"><a role="menuitem" href
                                        ng-click="dc.copyTreatment(treatment, treatments)">Neue
                 Behandlung (Kopie)</a></li>
             <li role="presentation"><a role="menuitem" href
                                        ng-click="dc.addTreatment(treatment, true, false, treatments)">Neue
                 Nebenbehandlung</a></li>
             <li role="presentation" class="divider"></li>
-            <li role="presentation"><a role="menuitem" href
+            <li role="presentation" ng-if="!user.isMandator"><a role="menuitem" href
                                        ng-click="dc.addTreatment(treatment, false, true, treatments)">Neue
                 Nichtmandanten-Behandlung</a>
             </li>
-            <li role="presentation"><a role="menuitem" href
+            <li role="presentation" ng-if="!user.isMandator"><a role="menuitem" href
                                        ng-click="dc.addTreatment(treatment, false, false, treatments)">Neue
                 Nichtmandanten-Nebenbehandlung</a>
             </li>
@@ -52,13 +62,13 @@
 
 
 <div class="col-xs-1">
-    <span class="heading-label treatment-user">{{treatment.user}}</span>
+    <span class="heading-label treatment-user">{{treatment.userToken}}</span>
 </div>
 
 
 <div class="col-xs-2">
     <!--<a class="btn btn-default dropdown-toggle">&nbsp;</a>-->
-    <div class="dropdown" toggle-focus dropdown>
+    <div class="dropdown" toggle-focus dropdown ng-show="!user.isMandator || user.mandator.id == treatment.mandator">
         <a class="btn btn-default dropdown-toggle" dropdown-toggle>
             {{ treatment.subject }} &nbsp;
         </a>
@@ -67,6 +77,9 @@
                 <a href ng-click="dc.changeSubject(treatment, subject)">{{subject}}</a>
             </li>
         </ul>
+    </div>
+    <div ng-hide="!user.isMandator || user.mandator.id == treatment.mandator">
+        <a class="btn btn-default">{{ treatment.subject }} &nbsp;</a>
     </div>
 </div>
 
@@ -94,7 +107,7 @@
     </div>
 </div>
 
-<div class="col-xs-3">
+<div class="col-xs-3" ng-show="treatment.isMandatorTreatment">
     <div class="pull-right">
         <div class="dropdown icon-dropdown" toggle-focus dropdown>
             <a class="btn dropdown-toggle achilles-icon achilles-medication"
